[CORE]: new class for storing objects in ROOT file with SQLite database
 * objects can be stored in a ROOT file with an unlimited list of
   informations on each object stored in an accompanying SQLite database
   file.
 * objects can be retrieved using any selection based on the SQLite
   informations.
 * a special case is where one of the informations stored is a string
   containing ranges of values in KVNumberList format.
   In this case the selected objects can be restricted to only those for
   which a given integer value is included in the KVNumberList range(s).

--- a/KVMultiDet/base/CMakeLists.txt
+++ b/KVMultiDet/base/CMakeLists.txt
@@ -4,7 +4,7 @@ if(WITH_RSQLITE)
    set(extra_libs ${extra_libs} ${ROOT_RSQLite_LIBRARY})
    set(lib_exclude)
 else()
-   set(lib_exclude SQLiteDB)
+   set(lib_exclude SQLiteDB KVSQLROOTFile)
 endif()
 set(dict_exclude KVError.h)
 
