[ID]: if available, id grid manager for array uses new SQL/ROOT backend
 * automatic switch to new KVSQLROOTIDGridManager if presence of
   KVSQLROOTFile 'idgrids_DB' in installed dataset directory

--- a/KVMultiDet/identification/CMakeLists.txt
+++ b/KVMultiDet/identification/CMakeLists.txt
@@ -3,6 +3,10 @@ if(NOT WITH_FITLTG)
 else()
 	include_directories(${FitLTG_SOURCE_DIR}/src)
 endif()
+#---Need ROOT with SQLite support for SQLiteDB
+if(NOT WITH_RSQLITE)
+   set(do_not_compile ${do_not_compile} KVSQLROOTIDGridManager)
+endif()
 
 BUILD_KALIVEDA_MODULE(identification
 	PARENT ${KVSUBPROJECT}
